Fix info button in add layer modal to make it compatible with the scrollbar

--- a/app/styles/components/map/item-list.scss
+++ b/app/styles/components/map/item-list.scss
@@ -190,6 +190,11 @@
     }
   }
 
+  .itemOptionItem {
+    margin-right: 15px;
+    margin-bottom: -10px;
+  }
+
   &._inlineList {
     justify-content: flex-start;
     margin-left: 5px;
